adding images, translating and config

--- a/website/pages/en/index.html
+++ b/website/pages/en/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="refresh" content="0; url=docs/doc1.html" />
+  <meta http-equiv="refresh" content="0; url=docs/quickstart.html" />
   <script type="text/javascript">
-    window.location.href = 'docs/doc1.html';
+    window.location.href = 'docs/quickstart.html';
   </script>
   <title>RaspiHive</title>
 </head>
 
 <body>
   If you are not redirected automatically, follow this
-  <a href="docs/doc1.md">link</a>.
+  <a href="docs/quickstart.md">link</a>.
 </body>
 
 </html>
